<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cristhianbonilla.cantantesmedellin.fragments.FormNewGroupFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:minHeight="1000dp"
            android:minWidth="1000dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout

                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreContacto"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailSubject" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_telfono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tel"
                        android:inputType="phone"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_fijo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_telefono_fijo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel_fijo"
                    android:inputType="phone"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_socialfb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_socialF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/facebook"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_youtube"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/video_youtube"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/descripcion" />



                <EditText
                    android:id="@+id/input_decripcion"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/bordes_redondos"
                    android:ems="100"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />


            <TextView
                android:id="@+id/error_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"

                />

            <Spinner
                android:id="@+id/list_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:entries="@array/category"
                android:prompt="@string/choose_category"
                android:spinnerMode="dropdown">


            </Spinner>

            <TextView
                android:id="@+id/muchas_imagenes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"

                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerPictures"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/imagen" />

            <Button
                android:id="@+id/subir_fotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnUpload_Click"
                android:text="@string/enviar" />


            <ImageView
                android:id="@+id/imagen"
                android:layout_width="100dp"
                android:layout_height="100dp" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
