<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:scrollbarSize="@dimen/activity_left_margin">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Titulo del grupo"
                android:textSize="25dp"

                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
            <ImageButton
                android:id="@+id/left_nav"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|left"
                android:src="@drawable/flechaizquierda"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:id="@+id/right_nav"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|right"
                android:src="@drawable/flechaderecha"
                android:background="@android:color/transparent"/>
</FrameLayout>
            <TextView
                android:id="@+id/numero_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="313-278-1123"
                android:textSize="25dp"

                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/caja_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bordes_redondos">

                <TextView
                    android:id="@+id/ver_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/ver_video"
                    android:textSize="19dp"
                    android:textStyle="italic|bold" />

                <ImageButton
                    android:id="@+id/btn_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/ver_video"
                    android:src="@drawable/youtube" />
            </RelativeLayout>

            <TextView
                android:id="@+id/content_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="  Got Fiesta?... We got the music!! LOS REYES MARIACHI-QUARTET is a very unique and versatile trio. Like no other, we perform a wide variety of styles and rhythms that represent the traditional Mexican music, mariachi, and latin-american folkloric music, like romantic boleros, cha-cha-cha, rancheras, cumbias, huapangos, sones, and fast paced rhythms typical from Veracruz like La Bamba, El Tilingo-Lingo, etc. We are experienced musicians with well over 1,500 songs in our repertory. The." />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:isIndicator="true" />

            <Button
                android:id="@+id/btn_cotizar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cotizacion" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/comentarios_titulo"
                android:textSize="25dp"
                android:textStyle="bold" />



                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_comentarios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />



            <!--  <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/content_review"/>
        <RatingBar
               android:id="@+id/idRating"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:isIndicator="false" />-->
            <Button
                android:id="@+id/ver_comentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ver Tods Los Comentarios"/>
            <Button
                android:id="@+id/btn_enviar_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="insertar comentario"/>
        </LinearLayout>



        </android.support.v4.widget.NestedScrollView>
</LinearLayout>